Added livereload to Rollup Changed the path of the resources used in demo/index.html

--- a/demo/index.html
+++ b/demo/index.html
@@ -8,8 +8,8 @@
   <title>Demo form</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="../dist/form-pages.js"></script>
-  <link rel="stylesheet" href="../src/form-pages.css">
+  <script src="/form-pages.js"></script>
+  <link rel="stylesheet" href="/form-pages.css">
 </head>
 
 <body>
@@ -48,6 +48,20 @@
           </div>
           <div class="form-group">
             <input type="submit" class="btn btn-primary" value="Submit my form!" />
+          </div>
+          <div class="form-group">
+            <div class="row">
+              <div class="col-sm-6 col-12">
+                <button class="btn w-100 btn-primary form-pages__prev-button">
+                  Prev
+                </button>
+              </div>
+              <div class="col-sm-6 col-12">
+                <button class="btn w-100 btn-primary form-pages__next-button">
+                  Next
+                </button>
+              </div>
+            </div>
           </div>
         </div>
       </form>
