Adjusted the events intialization for the form.

--- a/demo/index.html
+++ b/demo/index.html
@@ -84,6 +84,14 @@
       padding: 10px;
       border-radius: 5px;
     }
+    .form-pages__page {
+      display: flex;
+      flex-direction: column;
+    }
+
+    .form-pages__page > .form-group:last-child {
+      margin-top: auto;
+    }
   </style>
 </body>
 
