Added test about the new method to verify if the form can move forwards Added more steps to pre-commit hook.

--- a/demo/index.html
+++ b/demo/index.html
@@ -1,117 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Demo form</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" />
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="/form-pages.js"></script>
-  <link rel="stylesheet" href="/form-pages.css">
-</head>
+  <head>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
+    <title>Demo form</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css"/>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="/form-pages.js"></script>
+    <link rel="stylesheet" href="/form-pages.css">
+  </head>
 
-<body>
-  <h1 class="text-center">Demo pageable form</h1>
-  <div class="container">
-    <div class="col-12 col-sm-4 offset-sm-4">
-      <form class="pageable-form">
-        <div class="form-pages__page">
-          <div class="form-group">
-            <label>Name</label>
-            <input type="text" class="form-control" name="name" />
-          </div>
-          <div class="form-group">
-            <label>E-mail</label>
-            <input type="email" class="form-control" name="email" />
-          </div>
-          <div class="form-group">
-            <div class="row">
-              <div class="col-sm-6 col-12">
-                <button class="btn w-100 btn-primary form-pages__prev-button">
-                  Prev
-                </button>
-              </div>
-              <div class="col-sm-6 col-12">
-                <button class="btn w-100 btn-primary form-pages__next-button">
-                  Next
-                </button>
+  <body>
+    <h1 class="text-center">Demo pageable form</h1>
+    <div class="container">
+      <div class="col-12 col-sm-4 offset-sm-4">
+        <form class="pageable-form">
+          <div class="form-pages__page">
+            <div class="form-group">
+              <label>Name</label>
+              <input type="text" required="required" class="form-control" name="name"/>
+            </div>
+            <div class="form-group">
+              <label>E-mail</label>
+              <input type="email" required="required" class="form-control" name="email"/>
+            </div>
+            <div class="form-group">
+              <div class="row">
+                <div class="col-sm-6 col-12">
+                  <button class="btn w-100 btn-primary form-pages__prev-button">
+                    Prev
+                  </button>
+                </div>
+                <div class="col-sm-6 col-12">
+                  <button class="btn w-100 btn-primary form-pages__next-button">
+                    Next
+                  </button>
+                </div>
               </div>
             </div>
           </div>
-        </div>
-        <div class="form-pages__page">
-          <div class="form-group">
-            <label>Phone</label>
-            <input type="tel" class="form-control" name="tel" />
-          </div>
-          <div class="form-group">
-            <input type="submit" class="btn btn-primary" value="Submit my form!" />
-          </div>
-          <div class="form-group">
-            <div class="row">
-              <div class="col-sm-6 col-12">
-                <button class="btn w-100 btn-primary form-pages__prev-button">
-                  Prev
-                </button>
-              </div>
-              <div class="col-sm-6 col-12">
-                <button class="btn w-100 btn-primary form-pages__next-button">
-                  Next
-                </button>
+          <div class="form-pages__page">
+            <div class="form-group">
+              <label>Phone</label>
+              <input type="tel" class="form-control" name="tel"/>
+            </div>
+            <div class="form-group">
+              <input type="submit" class="btn btn-primary" value="Submit my form!"/>
+            </div>
+            <div class="form-group">
+              <div class="row">
+                <div class="col-sm-6 col-12">
+                  <button class="btn w-100 btn-primary form-pages__prev-button">
+                    Prev
+                  </button>
+                </div>
+                <div class="col-sm-6 col-12">
+                  <button class="btn w-100 btn-primary form-pages__next-button">
+                    Next
+                  </button>
+                </div>
               </div>
             </div>
           </div>
-        </div>
-      </form>
+        </form>
+      </div>
     </div>
-  </div>
-  <script>
-    $(function () {
-      var $pageableForm = $('.pageable-form');
-      // FormPages events contains data about the current page.
-      $pageableForm.formPages({
-        // Listening events using callback options.
-        onNextPage: function (e) {
-          console.log("onNextPage", e);
-        },
-        onPrevPage: function (e) {
-          console.log("onPrevPage", e);
-        },
-        onInitialized: function(instance) {
-          console.log("onInitialized", instance);
-        }
-      });
+    <script>
+      $(function () {
+        var $pageableForm = $('.pageable-form');
+        // FormPages events contains data about the current page.
+        $pageableForm.formPages({
+          // Listening events using callback options.
+          onNextPage: function (e) {
+            console.log("onNextPage", e);
+          },
+          onPrevPage: function (e) {
+            console.log("onPrevPage", e);
+          },
+          onInitialized: function (instance) {
+            console.log("onInitialized", instance);
+          }
+        });
 
-      // Listening events using `on` function.
-      $pageableForm.on("next.page.fp", function () {
-        console.log("next.page.fp");
-      });
-      $pageableForm.on("prev.page.fp", function () {
-        console.log("prev.page.fp");
-      });
-      $pageableForm.on("initialized.fp.page", function () {
-        console.log("prev.page.fp");
-      });
-    });
-  </script>
-  <style>
-    .pageable-form {
-      border: 1px solid #ccc;
-      padding: 10px;
-      border-radius: 5px;
-    }
+        // Listening events using `on` function.
 
-    .form-pages__page {
-      display: flex;
-      flex-direction: column;
-    }
+      });
+    </script>
+    <style>
+      .pageable-form {
+        border: 1px solid #ccc;
+        padding: 10px;
+        border-radius: 5px;
+      }
 
-    .form-pages__page>.form-group:last-child {
-      margin-top: auto;
-    }
-  </style>
-</body>
+      .form-pages__page {
+        display: flex;
+        flex-direction: column;
+      }
+
+      .form-pages__page > .form-group:last-child {
+        margin-top: auto;
+      }
+    </style>
+  </body>
 
 </html>
