--- a/demo/index.html
+++ b/demo/index.html
@@ -18,6 +18,7 @@
       <div class="col-12 col-sm-4 offset-sm-4">
         <form class="pageable-form">
           <div class="form-pages__page">
+            <h5>Page 1</h5>
             <div class="form-group">
               <label>Name</label>
               <input type="text" required="required" class="form-control" name="name"/>
@@ -42,8 +43,34 @@
             </div>
           </div>
           <div class="form-pages__page">
+            <h5>Page 2</h5>
             <div class="form-group">
               <label>Phone</label>
+              <input type="tel" class="form-control" name="tel"/>
+            </div>
+            <div class="form-group">
+              <label>Address</label>
+              <input type="text" class="form-control" name="address"/>
+            </div>
+            <div class="form-group">
+              <div class="row">
+                <div class="col-sm-6 col-12">
+                  <button class="btn w-100 btn-primary form-pages__prev-button">
+                    Prev
+                  </button>
+                </div>
+                <div class="col-sm-6 col-12">
+                  <button class="btn w-100 btn-primary form-pages__next-button">
+                    Next
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="form-pages__page">
+            <h5>Page 3</h5>
+            <div class="form-group">
+              <label>Some other field</label>
               <input type="tel" class="form-control" name="tel"/>
             </div>
             <div class="form-group">
