--- a/demo/index.html
+++ b/demo/index.html
@@ -27,7 +27,7 @@
               <label>E-mail</label>
               <input type="email" required="required" class="form-control" name="email"/>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-0">
               <div class="row">
                 <div class="col-sm-6 col-12">
                   <button class="btn w-100 btn-primary form-pages__prev-button">
@@ -51,6 +51,10 @@
             <div class="form-group">
               <label>Address</label>
               <input type="text" class="form-control" name="address"/>
+            </div>
+            <div class="form-group">
+              <label>Blood type ¯\_(ツ)_/¯</label>
+              <input type="text" class="form-control" name="bloodtype"/>
             </div>
             <div class="form-group">
               <div class="row">
